tests/NormalTests/paczka1/small_fuzzy/79144175.err
Error in line 1: UpwMQ A917 22,3
Error in line 2: UpwMQ A584 13,5
Error in line 5: UpwMQ S666 31,0
Error in line 8: UpwMQ A58O 6,9
Error in line 3: A419 A584 60,9
